tests/macros/missing/name.rs
fn main() {
    discourse::questions![Input {}];
}
